--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ko">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GBWVDRHRTR"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-GBWVDRHRTR"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -24,29 +27,94 @@
 
     <meta property="og:title" content="유성문화관광, 프로젝트" />
     <meta property="og:description" content="김민정의 반응형 프로젝트입니다." />
-    <meta property="og:url" content="https://kimminjung96.github.io/tech/page/project1/index.html" />
+    <meta
+      property="og:url"
+      content="https://kimminjung96.github.io/tech/page/project1/index.html"
+    />
     <meta property="og:image" content="images/og_img.png" />
 
     <title>유성구 문화관광</title>
 
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="images/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="images/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="images/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="images/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="images/favicon/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="images/favicon/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="images/favicon/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="images/favicon/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/favicon/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="images/favicon/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="images/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon/favicon-16x16.png"
+    />
     <link rel="manifest" href="images/favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="images/favicon/ms-icon-144x144.png"
+    />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -92,8 +160,14 @@
         <div class="header_bot">
           <div class="logo">
             <h1>
-              <a href="https://kimminjung96.github.io/project1/" class="logo_img"><span>유성구</span></a>
-              <a href="https://kimminjung96.github.io/project1/"><strong>문화관광</strong></a>
+              <a
+                href="https://kimminjung96.github.io/project1/"
+                class="logo_img"
+                ><span>유성구</span></a
+              >
+              <a href="https://kimminjung96.github.io/project1/"
+                ><strong>문화관광</strong></a
+              >
             </h1>
           </div>
           <nav id="lnb" class="width100 pr">
@@ -104,7 +178,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>온천도시 유성</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -133,7 +210,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>유성명소</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -161,7 +241,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>추천여행</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -193,7 +276,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>축제·공연</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -220,7 +306,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>숙박·음식·쇼핑</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -256,7 +345,10 @@
                   <ul class="width1400 df dep2">
                     <li class="m_title">
                       <h2>여행 가이드</h2>
-                      <p>다함께 더 좋은 유성!<br />과학과 온천의 관광도시 유성입니다.</p>
+                      <p>
+                        다함께 더 좋은 유성!<br />과학과 온천의 관광도시
+                        유성입니다.
+                      </p>
                       <img src="images/gnb_obj.png" alt="" />
                     </li>
                     <li>
@@ -277,10 +369,12 @@
             </ul>
           </nav>
           <div class="sitemap">
-            <a href="#"><img src="images/menu.png" alt="사이트맵페이지로 이동" /></a>
+            <a href="#"
+              ><img src="images/menu.png" alt="사이트맵페이지로 이동"
+            /></a>
           </div>
         </div>
-        <div id="full_menu">
+        <!--         <div id="full_menu">
           <ul>
             <li>
               <a href="#">온천도시 유성</a>
@@ -342,6 +436,7 @@
             </li>
           </ul>
         </div>
+ -->
       </header>
 
       <section id="main">
@@ -352,17 +447,29 @@
             <strong><b>천년온천</b>유성의<b>도시미학</b></strong>
           </div>
           <div class="slider_wrap">
-            <div id="weather"></div>
+            <!-- <div id="weather"></div> -->
             <div id="brandVisual">
               <ul>
                 <li class="visual_1">
-                  <a href="#"><img src="images/main_banner1.jpg" alt="메인슬라이더 베너1" /></a>
+                  <a href="#"
+                    ><img
+                      src="images/main_banner1.jpg"
+                      alt="메인슬라이더 베너1"
+                  /></a>
                 </li>
                 <li class="visual_2">
-                  <a href="#"><img src="images/main_banner2.jpg" alt="메인슬라이더 베너2" /></a>
+                  <a href="#"
+                    ><img
+                      src="images/main_banner2.jpg"
+                      alt="메인슬라이더 베너2"
+                  /></a>
                 </li>
                 <li class="visual_3">
-                  <a href="#"><img src="images/main_banner3.jpg" alt="메인슬라이더 베너3" /></a>
+                  <a href="#"
+                    ><img
+                      src="images/main_banner3.jpg"
+                      alt="메인슬라이더 베너3"
+                  /></a>
                 </li>
               </ul>
             </div>
@@ -664,7 +771,10 @@
       <!-- //id="pick" -->
       <section id="location">
         <h4 class="title">생생<span>VR</span></h4>
-        <p>VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게 경험하세요!</p>
+        <p>
+          VR사이버 투어로 사계절 자연풍경 가득한 도시의 매력을 생생하게
+          경험하세요!
+        </p>
         <div class="li">
           <b></b>
           <a href="#" class="ir_pm">VR사이버투어</a>
@@ -797,20 +907,44 @@
             <h5>공지사항</h5>
             <ul id="noticeSlider" class="df col">
               <li class="df">
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
               </li>
               <li class="df">
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
               </li>
               <li class="df">
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
               </li>
               <li class="df">
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
-                <a href="#"> 2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규 주민사업체 모집 <span>22.05.10</span> </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
+                <a href="#">
+                  2022 관광두레 신규 주민사업체 모집 2022 관광두레 신규
+                  주민사업체 모집 <span>22.05.10</span>
+                </a>
               </li>
               <!-- 
               <li>
@@ -902,12 +1036,25 @@
             <li><a href="#">찾아오시는길</a></li>
           </ul>
           <div class="df">
-            <address>(우 12345) 서울특별시 동대문구 삼성로 999 <span>전화 : 042-1885-4875</span></address>
+            <address>
+              (우 12345) 서울특별시 동대문구 삼성로 999
+              <span>전화 : 042-1885-4875</span>
+            </address>
             <p>Copyright © 2022 KMJ. ALL RIGHTS RESERVED.</p>
           </div>
           <div class="footer_link">
-            <a href="https://validator.w3.org/check?uri=https://kimminjung96.github.io/project1/"><img src="https://www.w3.org/Icons/valid-html401" alt="유효성검사" /></a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https://kimminjung96.github.io/project1/"><img src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="유효성검사" /></a>
+            <a
+              href="https://validator.w3.org/check?uri=https://kimminjung96.github.io/project1/"
+              ><img
+                src="https://www.w3.org/Icons/valid-html401"
+                alt="유효성검사"
+            /></a>
+            <a
+              href="https://jigsaw.w3.org/css-validator/validator?uri=https://kimminjung96.github.io/project1/"
+              ><img
+                src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                alt="유효성검사"
+            /></a>
           </div>
         </div>
       </footer>
@@ -922,7 +1069,7 @@
     <script src="js/notice.js"></script>
     <script src="js/tab.js"></script>
     <script src="js/top.js"></script>
-    <script src="js/weather.js"></script>
+    <!-- <script src="js/weather.js"></script> -->
     <script src="js/nav.js"></script>
     <script src="js/cookie.js"></script>
   </body>
